--- a/app/styles/_generic.base.scss
+++ b/app/styles/_generic.base.scss
@@ -40,9 +40,9 @@ a {
  * Nav Links
  */
 .links {
-  z-index: 1;
+  z-index: 2;
   padding: $grid-gutter-width;
-  margin-top: -4%;
+  margin-top: -3%;
   background: url(../images/t2.png) #000;
   opacity: .8;
 
@@ -124,6 +124,10 @@ a {
 
   a {
     color: #fff;
+    text-decoration: strike;
+  }
+
+  b {
     font-weight: bold;
   }
 }
