--- a/app/_base.njk
+++ b/app/_base.njk
@@ -8,7 +8,7 @@
     <meta name="author" content="kuus <kunderikuus@gmail.com> (http://kunderikuus.net)">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     {# Place favicon.ico in the root directory #}
-    <link href="http://fonts.googleapis.com/css?family=Oswald:700|Rokkitt:400" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:700|Rokkitt:400" rel="stylesheet" type="text/css"/>
     <!-- build:css styles/app.css inline-->
     <!-- bower:css-->
     <!-- endbower-->
