--- a/app/index.njk
+++ b/app/index.njk
@@ -13,10 +13,10 @@
       <nav class="links"><a href="https://github.com/kuus" title="Github" class="icon icon-github"></a><a href="https://nl.linkedin.com/in/kunderikuus" title="LinkedIn" class="icon icon-linkedin"></a><a href="mailto:kunderikuus@gmail.com" title="Email" class="icon icon-mail"></a></nav>
       <header class="header">
         <h1 class="title">kunderi kuus</h1>
-        <h2 class="subtitle"><b>Available for hiring.</b> Currently located in Italy<br>working on &nbsp;<a href="http://pluswp.com">pluswp</a>, an ambitious WordPress project.</h2>
+        <h2 class="subtitle"><b>Available for hiring.</b> Currently located in Italy<br>working on &nbsp;<a href="https://pluswp.com">PlusWP</a>, an ambitious WordPress project.</h2>
       </header>
       <footer class="footer">
-        <h5>Copyright &copy; 2012 - <span id="copy-year">2016<span></h5>
+        <h5>Copyright &copy; 2012 - <span id="copy-year">2017<span> | (P.IVA. 09799290961)</h5>
       </footer>
     </article>
   </section>
