--- a/app/index.njk
+++ b/app/index.njk
@@ -16,7 +16,7 @@
         <h2 class="subtitle"><b>Available for hiring.</b> Currently located in Italy<br>working on &nbsp;<a href="https://pluswp.com">PlusWP</a>, an ambitious WordPress project.</h2>
       </header>
       <footer class="footer">
-        <h5>Copyright &copy; 2012 - <span id="copy-year">2017<span> | (P.IVA. 09799290961)</h5>
+        <h5>Copyright &copy; 2012 - <span id="copy-year">2017</span> | (P.IVA. 09799290961)</h5>
       </footer>
     </article>
   </section>
